# discord-bot

./: .gitignore  .gitmodules  CMakeLists.txt  admin.cpp  admin.hpp  macros.hpp
src/: admin.hpp  ai.cpp  ai.hpp  commands.cpp  commands.hpp  macros.cpp  macros.hpp  main.cpp  poke.cpp  poke.hpp
