cmake_minimum_required(VERSION 3.18)
project(Panda3DSBot)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_STANDARD 20)
set(DPP_BUILD_TEST OFF)
set(DPP_INSTALL OFF)
set(BUILD_VOICE_SUPPORT OFF)
add_subdirectory(third_party/DPP)
add_subdirectory(third_party/toml11)
add_subdirectory(third_party/liboai/liboai)

add_executable(Panda3DSBot src/main.cpp src/commands.cpp src/admin.cpp src/macros.cpp src/ai.cpp)
target_include_directories(Panda3DSBot PRIVATE third_party/DPP/include third_party/toml11 third_party/liboai/liboai/include)
target_link_libraries(Panda3DSBot dpp oai)